# Engineering-Thesis

./: .gitignore  README.md  stadiumBlocks.py
Interface/: .gitignore  main.py  myoutput.txt  neuralNetworkInputs.md
Interface/MyChallenges/: AllowedElements.Challenge.Gbx  Map1.Challenge.Gbx  Map2.Challenge.Gbx  Map3.Challenge.Gbx  Map4.Challenge.Gbx  Map5.Challenge.Gbx  Test 10.Challenge.Gbx  Test1.Challenge.Gbx  Test10.Challenge.Gbx  Test11.Challenge.Gbx  Test12.Challenge.Gbx  Test2.Challenge.Gbx  Test3.Challenge.Gbx  Test4.Challenge.Gbx  Test5.Challenge.Gbx  Test6.Challenge.Gbx  Test7.Challenge.Gbx  Test8.Challenge.Gbx  Test9.Challenge.Gbx
Interface/src/: blockPositions.py  blockRotation.py  stadiumBlocks.py  trackmaniaConnector.py
Interface/src/agentCommunicator/: agentCommunicator.py
Interface/src/blocks/: blockPositions.py  blockRotation.py  stadiumBlocks.py
Interface/src/connector/: trackmaniaConnector.py
Interface/src/logger/: log.py
Interface/test/: testRotateMatrix.py
NeuralNetwork/: .bazelrc  .gitignore  BUILD  CMakeLists.txt  Makefile  WORKSPACE  gitenv.sh  main.cpp  readme.md  setup.py
NeuralNetwork/src/: CMakeLists.txt
NeuralNetwork/src/AgentControl/: AgentControl.cpp  AgentControl.h
NeuralNetwork/src/Layer/: CMakeLists.txt  layer.cpp  layer.h
NeuralNetwork/src/Logger/: CMakeLists.txt  logger.h
NeuralNetwork/src/TrainingData/: CMakeLists.txt  trainingData.cpp  trainingData.h
NeuralNetwork/src/fastMatrix/: BUILD  CMakeLists.txt  FastMatrix.cpp  FastMatrix.h
NeuralNetwork/src/model/: BUILD  CMakeLists.txt  layer.cpp  layer.h  model.cpp  model.h  trainingData.cpp  trainingData.h
NeuralNetwork/src/pythonApi/: BUILD  pythonApi.cpp  pythonApi.h
NeuralNetwork/test/: BUILD  CMakeLists.txt  generator.py  matrixOperationsTest.h  modelTest.h  runTests.cpp  testFramework.h  trainingDataTest.h
NeuralNetwork/test/TestData/: hammingLengthTest.txt  parityTestData.txt  pendigits.tes  pendigits.tra
NeuralNetwork/test/TestUtils/: CMakeLists.txt  testUtils.cpp  testUtils.h
NeuralNetwork/test/matrixTest/: BUILD  matrixOperationsTest.h
NeuralNetwork/test/modelTest/: BUILD  generator.py  modelTest.h  xorData.txt
NeuralNetwork/toolchain/: cc_toolchain_config.bzl
